trying to fix problem of pyc files not updating

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 tigaserver_project/settings/local.py
 tigaserver_project/settings/local/*
-*.pyc
-*.egg-info
-*local.ipynb
-.idea/*
+tigaserver_project/settings/local.pyc
