--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 tigaserver_project/settings_local.py
 tigaserver_project/settings_local*
 tigaserver_project/settings/local.pyc
+*pyc
+*.egg-info
+*idea/
