--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ tigaserver_project/settings/local.pyc
 *.sublime-project
 *.sublime-workspace
 *.sublime*
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
