Additional packages added

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,5 +1,16 @@
 packages:
   yum:
     git: []
-    postgresql93-devel: []
+    postgresql: []
+    postgresql-devel: []
+    postgresql-server: []
+    postgresql9-contrib: []
+    gcc: []
+    gcc-c++: [] 
+    make: []
+    libtool: []
+    curl: []
+    libxml2: []
+    libxml2-devel: []
+    python-devel: []
 
