--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -4,7 +4,7 @@ packages:
     postgresql: []
     postgresql-devel: []
     postgresql-server: []
-    postgresql9-contrib: []
+    postgresql-contrib: []
     gcc: []
     gcc-c++: [] 
     make: []
