--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -14,3 +14,6 @@ packages:
     libxml2-devel: []
     python-devel: []
 
+container_commands:
+  01_osgeo:
+    command: "wget http://download.osgeo.org/proj/proj-4.8.0.zip && unzip proj-4.8.0.zip && cd proj-4.8.0 && ./configure && make && sudo make install && cd .."
