Fixed yum postgresql not found

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,7 +1,7 @@
 packages:
   yum:
     git: []
-    postgresql: []
+    postgresql93: []
     postgresql-devel: []
     postgresql-server: []
     postgresql-contrib: []
