Fixed yum postgresql package names not found

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -2,9 +2,9 @@ packages:
   yum:
     git: []
     postgresql93: []
-    postgresql-devel: []
-    postgresql-server: []
-    postgresql-contrib: []
+    postgresql93-devel: []
+    postgresql93-server: []
+    postgresql93-contrib: []
     gcc: []
     gcc-c++: [] 
     make: []
