--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -13,14 +13,14 @@ packages:
     libxml2: []
     libxml2-devel: []
 
-container_commands:
-  01_proj4:
-    command: "wget http://download.osgeo.org/proj/proj-4.8.0.zip && unzip proj-4.8.0.zip && cd proj-4.8.0 && ./configure && make && sudo make install && cd .."
-  02_geos:
-    command: "wget http://download.osgeo.org/geos/geos-3.4.2.tar.bz2 && tar -xvf geos-3.4.2.tar.bz2 && cd geos-3.4.2 && ./configure && make && sudo make install && cd .."
-  03_gdal:
-    command: "wget http://download.osgeo.org/gdal/1.10.1/gdal1101.zip && unzip gdal1101.zip && cd gdal-1.10.1 && ./configure --with-python=yes && make && sudo make install && cd .."
-  04_postgis:
-    command: "wget http://download.osgeo.org/postgis/source/postgis-2.1.1.tar.gz && tar -xvf postgis-2.1.1.tar.gz && cd postgis-2.1.1 && ./configure && make && sudo make install && cd .."
-  05_postinstall:
-    command: "sudo -i && echo '/usr/local/lib' >> /etc/ld.so.conf.d/local-lib.conf && ldconfig"
+#container_commands:
+#  01_proj4:
+#    command: "wget http://download.osgeo.org/proj/proj-4.8.0.zip && unzip proj-4.8.0.zip && cd proj-4.8.0 && ./configure && make && sudo make install && cd .."
+#  02_geos:
+#    command: "wget http://download.osgeo.org/geos/geos-3.4.2.tar.bz2 && tar -xvf geos-3.4.2.tar.bz2 && cd geos-3.4.2 && ./configure && make && sudo make install && cd .."
+#  03_gdal:
+#    command: "wget http://download.osgeo.org/gdal/1.10.1/gdal1101.zip && unzip gdal1101.zip && cd gdal-1.10.1 && ./configure --with-python=yes && make && sudo make install && cd .."
+#  04_postgis:
+#    command: "wget http://download.osgeo.org/postgis/source/postgis-2.1.1.tar.gz && tar -xvf postgis-2.1.1.tar.gz && cd postgis-2.1.1 && ./configure && make && sudo make install && cd .."
+#  05_postinstall:
+#    command: "sudo -i && echo '/usr/local/lib' >> /etc/ld.so.conf.d/local-lib.conf && ldconfig"
