--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -13,9 +13,9 @@ packages:
     libxml2: []
     libxml2-devel: []
 
-#container_commands:
-#  01_proj4:
-#    command: "wget http://download.osgeo.org/proj/proj-4.8.0.zip && unzip proj-4.8.0.zip && cd proj-4.8.0 && ./configure && make && sudo make install && cd .."
+container_commands:
+  01_proj4:
+    command: "wget http://download.osgeo.org/proj/proj-4.8.0.zip && unzip proj-4.8.0.zip && cd proj-4.8.0 && ./configure && make && sudo make install && cd .."
 #  02_geos:
 #    command: "wget http://download.osgeo.org/geos/geos-3.4.2.tar.bz2 && tar -xvf geos-3.4.2.tar.bz2 && cd geos-3.4.2 && ./configure && make && sudo make install && cd .."
 #  03_gdal:
