--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -16,8 +16,10 @@ packages:
 container_commands:
   01_proj4:
     command: "wget http://download.osgeo.org/proj/proj-4.8.0.zip && unzip proj-4.8.0.zip && cd proj-4.8.0 && ./configure && make && sudo make install && cd .."
-#  02_geos:
-#    command: "wget http://download.osgeo.org/geos/geos-3.4.2.tar.bz2 && tar -xvf geos-3.4.2.tar.bz2 && cd geos-3.4.2 && ./configure && make && sudo make install && cd .."
+    leader_only: true
+  02_geos:
+    command: "wget http://download.osgeo.org/geos/geos-3.4.2.tar.bz2 && tar -xvf geos-3.4.2.tar.bz2 && cd geos-3.4.2 && ./configure && make && sudo make install && cd .."
+    leader_only: true
 #  03_gdal:
 #    command: "wget http://download.osgeo.org/gdal/1.10.1/gdal1101.zip && unzip gdal1101.zip && cd gdal-1.10.1 && ./configure --with-python=yes && make && sudo make install && cd .."
 #  04_postgis:
