--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -20,9 +20,12 @@ container_commands:
   02_geos:
     command: "wget http://download.osgeo.org/geos/geos-3.4.2.tar.bz2 && tar -xvf geos-3.4.2.tar.bz2 && cd geos-3.4.2 && ./configure && make && sudo make install && cd .."
     leader_only: true
-#  03_gdal:
-#    command: "wget http://download.osgeo.org/gdal/1.10.1/gdal1101.zip && unzip gdal1101.zip && cd gdal-1.10.1 && ./configure --with-python=yes && make && sudo make install && cd .."
-#  04_postgis:
-#    command: "wget http://download.osgeo.org/postgis/source/postgis-2.1.1.tar.gz && tar -xvf postgis-2.1.1.tar.gz && cd postgis-2.1.1 && ./configure && make && sudo make install && cd .."
+  03_gdal:
+    command: "wget http://download.osgeo.org/gdal/1.10.1/gdal1101.zip && unzip gdal1101.zip && cd gdal-1.10.1 && ./configure --with-python=yes && make && sudo make install && cd .."
+    leader_only: true
+  04_postgis:
+    command: "wget http://download.osgeo.org/postgis/source/postgis-2.1.1.tar.gz && tar -xvf postgis-2.1.1.tar.gz && cd postgis-2.1.1 && ./configure && make && sudo make install && cd .."
+    leader_only: true
   05_postinstall:
     command: "sudo -i && echo '/usr/local/lib' >> /etc/ld.so.conf.d/local-lib.conf && ldconfig"
+    leader_only: true
