All packages present in custom AMI

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,17 +1,17 @@
-packages:
-  yum:
-    git: []
-    postgresql93: []
-    postgresql93-devel: []
-    postgresql93-server: []
-    postgresql93-contrib: []
-    gcc: []
-    gcc-c++: [] 
-    make: []
-    libtool: []
-    curl: []
-    libxml2: []
-    libxml2-devel: []
+#packages:
+#  yum:
+#    git: []
+#    postgresql93: []
+#    postgresql93-devel: []
+#    postgresql93-server: []
+#    postgresql93-contrib: []
+#    gcc: []
+#    gcc-c++: [] 
+#    make: []
+#    libtool: []
+#    curl: []
+#    libxml2: []
+#    libxml2-devel: []
 
 #container_commands:
 #  01_proj4:
