Last revision, epi map

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ tigaserver_project/settings_local.py
 tigaserver_project/settings_local*
 tigaserver_project/settings/local.pyc
 tigapublic/static/tigapublic/files/
+tigapublic/files/models/
 *pyc
 *.egg-info
 .idea/*
