--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -8,8 +8,9 @@ services:
   django: &django
     build:
       context: .
-      dockerfile: ./compose/local/django/Dockerfile
-    image: mosquito_alert_local_django
+      args:
+        BUILD_ENVIRONMENT: local
+    image: mosquito_alert_local
     container_name: mosquito_alert_local_django
     depends_on:
       - postgres
@@ -31,10 +32,7 @@ services:
       start_period: 10s
 
   postgres:
-    build:
-      context: .
-      dockerfile: ./compose/production/postgres/Dockerfile
-    image: mosquito_alert_production_postgres
+    image: postgis/postgis:15-3.3
     container_name: mosquito_alert_local_postgres
     volumes:
       - mosquito_alert_local_postgres_data:/var/lib/postgresql/data:Z
@@ -54,7 +52,6 @@ services:
 
   celeryworker:
     <<: *django
-    image: mosquito_alert_local_celeryworker
     container_name: mosquito_alert_local_celeryworker
     depends_on:
       - redis
@@ -63,11 +60,10 @@ services:
     ports: []
     command: /start-celeryworker
     healthcheck:
-      disable: true
+      test: "/entrypoint celery inspect ping -d celery@$$HOSTNAME"
 
   celerybeat:
     <<: *django
-    image: mosquito_alert_local_celerybeat
     container_name: mosquito_alert_local_celerybeat
     depends_on:
       - redis
@@ -80,7 +76,6 @@ services:
 
   flower:
     <<: *django
-    image: mosquito_alert_local_flower
     container_name: mosquito_alert_local_flower
     ports:
       - "5555:5555"
