--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: '^docs/|/migrations/'
+exclude: "^docs/|/migrations/"
 default_stages: [commit]
 
 repos:
@@ -7,6 +7,7 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+      - id: check-ast
       - id: check-json
       - id: check-toml
       - id: check-xml
@@ -14,14 +15,16 @@ repos:
       - id: debug-statements
       - id: check-builtin-literals
       - id: check-case-conflict
+      - id: check-merge-conflict
       - id: check-docstring-first
+      - id: check-executables-have-shebangs
       - id: detect-private-key
 
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: '1.14.0'
+    rev: "1.14.0"
     hooks:
       - id: django-upgrade
-        args: ['--target-version', '4.2']
+        args: ["--target-version", "4.2"]
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.7.0
@@ -49,6 +52,20 @@ repos:
     hooks:
       - id: djlint-reformat-django
       - id: djlint-django
+
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.4.0
+    hooks:
+      - id: detect-secrets
+        additional_dependencies: ["gibberish-detector"]
+        args: ["--exclude-files", ".envs/.local/*|test_*.py"]
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.5
+    hooks:
+      - id: bandit
+        args: ["-ii", "-ll", "-c", "pyproject.toml"]
+        additional_dependencies: ["bandit[toml]"]
 
 # sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
 ci:
