--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,3 +110,10 @@ indent_size = 2
 
 [tool.djlint.js]
 indent_size = 2
+
+# ==== bandit ====
+[tool.bandit]
+exclude_dirs = ["*/migrations/*"]
+
+[tool.bandit.assert_used]
+skips = ['*_test.py', '*/test_*.py']
