--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# Be aware of changing the name since there are dependnecies
 name: CI
 
 # Enable Buildkit and let compose use it to speed up image building
@@ -6,20 +7,22 @@ env:
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 on:
+  # See: https://docs.github.com/en/actions/using-workflows/reusing-workflows
+  workflow_call:
   pull_request:
-    branches: ['v2']  # Change to ['master', 'main'] when merged.
-    #paths-ignore: ['docs/**']
-
-  push:
-    branches: ['v2']  # Change to ['master', 'main'] when merged.
-    #paths-ignore: ['docs/**']
+    types:
+      - opened
+      - edited
+      - synchronize
+      - reopened
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
-  linter:
+  lint:
+    name: Code standards
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code Repository
@@ -34,7 +37,8 @@ jobs:
         uses: pre-commit/action@v3.0.0
 
   # With no caching at all the entire ci process takes 4m 30s to complete!
-  pytest:
+  test:
+    name: Test application
     runs-on: ubuntu-latest
 
     steps:
