--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,4 +58,4 @@ jobs:
           verbose: true
 
       - name: Tear down the Stack
-        run: docker-compose -f docker-compose-local.yml down
+        run: docker compose -f docker-compose-local.yml down
