Auth using password instead of device_toke

--- a/api/tests/integration/notifications/get.tavern.yml
+++ b/api/tests/integration/notifications/get.tavern.yml
@@ -70,7 +70,7 @@ stages:
       url: "{api_live_url}/token/"
       json:
         uuid: "{app_user.pk}"
-        device_token: "{app_user.device_token}"
+        password: "{user_password}"
       method: POST
     response:
       status_code: 200
