--- a/api/tests/integration/shared_stages.yml
+++ b/api/tests/integration/shared_stages.yml
@@ -6,6 +6,7 @@ description:
 
 variables:
   user_device_token: "123456789"
+  user_password: "testpassword123_tmp"
   accounts_login_path: 'en/accounts/login'
 
 stages:
@@ -14,6 +15,7 @@ stages:
     request:
       url: "{api_live_url}/users/"
       json:
+        password: "{user_password}"
         device_token: "{user_device_token}"
       method: POST
     response:
@@ -27,7 +29,7 @@ stages:
       url: "{api_live_url}/token/"
       json:
         uuid: "{user_uuid}"
-        device_token: "{user_device_token}"
+        password: "{user_password}"
       method: POST
     response:
       status_code: 200
