--- a/api/tests/integration/reports/get.tavern.yml
+++ b/api/tests/integration/reports/get.tavern.yml
@@ -104,7 +104,7 @@ stages:
 
 ---
 
-test_name: App user can only retrieve their notifications if not published.
+test_name: App user can only retrieve their reports even if not published.
 
 includes:
   - !include schema.yml
@@ -186,3 +186,34 @@ stages:
     response:
       status_code: 404
 
+
+---
+
+test_name: Hidden photos are not displayed in reports
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - adult_report
+    - report_hidden_photo
+    - token_user_can_view
+
+stages:
+  - name: User without perm view can retrieve
+    request:
+      url: "{api_live_url}/{endpoint}/{adult_report.pk}/"
+      method: "GET"
+      headers:
+        Authorization: "Token {token_user_can_view:s}"
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern.helpers:validate_content
+        extra_kwargs:
+          comparisons:
+            - jmespath: "photos"
+              operator: "count_eq"
+              expected: 0
