Fix openapi schema + prepare for openapi generator

--- a/api/tests/integration/notifications/create.tavern.yml
+++ b/api/tests/integration/notifications/create.tavern.yml
@@ -75,10 +75,7 @@ stages:
       method: "POST"
     response:
       status_code: 201
-      json: &response_validation
-        id: !anyint
-        receiver_type: "user"
-        created_at: !re_fullmatch \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{6}Z
+      json: !force_format_include "{response_data_validation}"
   - name: Create topic notification using auth user with permissions
     request:
       url: "{api_live_url}/{endpoint}/"
@@ -92,6 +89,4 @@ stages:
       method: "POST"
     response:
       status_code: 201
-      json:
-        <<: *response_validation
-        receiver_type: "topic"
+      json: !force_format_include "{response_data_validation}"
