--- a/api/tests/integration/bites/create.tavern.yml
+++ b/api/tests/integration/bites/create.tavern.yml
@@ -61,6 +61,7 @@ stages:
         short_id: !anystr
         user_uuid: "{app_user.pk}"
         created_at: '2024-01-01T00:00:00Z'
+        created_at_local: '2024-01-01T01:00:00+01:00'
         sent_at: '2024-01-01T00:30:00Z'
         received_at: !re_fullmatch \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{6}Z
         updated_at: !re_fullmatch \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{6}Z
