--- a/api/tests/integration/bites/create.tavern.yml
+++ b/api/tests/integration/bites/create.tavern.yml
@@ -40,6 +40,9 @@ stages:
         location.point: !raw '{"latitude": 41.67419, "longitude": 2.79036}'
         location.type: 'current'
         note: "Test"
+        tags:
+          - tag1
+          - tag2
         package:
           name: testapp
           version: v123
@@ -75,6 +78,7 @@ stages:
           nuts_2: !anything
           nuts_3: !anything
         note: Test
+        tags: !anylist
         published: false
         event_environment: indoors
         event_moment: now
