--- a/api/tests/integration/users/update.tavern.yml
+++ b/api/tests/integration/users/update.tavern.yml
@@ -22,6 +22,7 @@ stages:
       url: "{api_live_url}/{endpoint}/{user_uuid}/"
       json:
         device_token: "987654321"
+        language_iso: "es"
       headers:
         Authorization: "Bearer {token}"
       method: "{method}"
@@ -32,6 +33,7 @@ stages:
       url: "{api_live_url}/{endpoint}/{user_uuid}/"
       json:
         device_token: "987654321"
+        language_iso: "es"
       method: "{method}"
     response:
       status_code: 403
