--- a/api/tests/integration/devices/update.tavern.yml
+++ b/api/tests/integration/devices/update.tavern.yml
@@ -43,8 +43,7 @@ stages:
         os:
           name: new_test_os
           version: new_test_version
-          language_iso: es
-          locale_code: es-ES
+          locale: es-ES
         mobile_app:
           package_name: new_test_package_name
           package_version: new_test_package_version
@@ -57,8 +56,7 @@ stages:
         os:
           name: new_test_os
           version: new_test_version
-          language_iso: es
-          locale_code: es-ES
+          locale: es-ES
         mobile_app:
           package_name: new_test_package_name
           package_version: new_test_package_version
